--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   min-height: 100vh;
   max-width: 393px;
   width: 100%;
-  background-color: #977ded;
+  background-color: #576a9c;
 }
 
 .logo {
