--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .container-mobile {
   margin: auto;
-  min-height: 100vh;
+  height: 852px;
   max-width: 393px;
   width: 100%;
   background-color: #576a9c;
